<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hanifkf.lostandfound.Login.MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/ptbulet"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_email"
                android:hint="@string/email_pengguna"
                android:inputType="text"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_password"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:textSize="16sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/txt_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lupa_kata_sandi_klik_disini"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/roundbutton_white"
            android:text="@string/masuk"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/tidak_mempunyai_akun_daftar_disini"/>

    </LinearLayout>

</LinearLayout>