<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hanifkf.lostandfound.Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="96dp"
            android:text="@string/lupa_password"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/forgot_pass_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email2"
                android:inputType="text"
                android:paddingTop="0dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbutton_white"
            android:text="@string/setel_ulang"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_login_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:text="@string/sudah_ingat_password_masuk_disini"/>
    </LinearLayout>

</LinearLayout>