<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_comment"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:src="@drawable/images"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/user_profile_comment"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_username_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_profile_comment"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_isi_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_username_comment"
                android:layout_toRightOf="@+id/user_profile_comment"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/deskripsi"
                android:textColor="@color/colorBlack1"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/txt_waktu_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details"
                android:textColor="@color/colorGrey"
                android:textSize="10sp"/>

        </LinearLayout>

</RelativeLayout>
