<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/proflebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/images"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/username"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/emaiil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/email"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recentpost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/proflebar"/>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="200dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:lineSpacingMultiplier="1.5"
            android:textAlignment="center"
            android:text="@string/anda_belum_memposting_apapun"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"/>

    </RelativeLayout>

</RelativeLayout>